change use of deprecated Integer constructor